[package]
name = "draw"
version = "0.2.5"
authors = ["Ryan Ragona <ryan@ragona.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/ragona/draw"
description = "A small 2D drawing library"
license = "MIT"
docs = "https://docs.rs/draw"

[dependencies]
rgb = "0.8.14"
svg = "0.5.12"
cgmath = "0.17.0"
