[package]
name = "draw"
license = "MIT"
version = "0.2.9"
edition = "2018"
readme = "README.md"
authors = ["Ryan Ragona <ryan@ragona.com>"]
repository = "https://github.com/ragona/draw"
description = "A small 2D drawing library"
documentation = "https://docs.rs/draw"

[dependencies]
rgb = "0.8.14"
svg = "0.5.12"
rand = "0.7.0"
cgmath = "0.17.0"
