[package]
name = "draw"
license = "MIT"
version = "0.3.0"
edition = "2018"
readme = "README.md"
authors = ["Ryan Ragona <ryan@ragona.com>"]
repository = "https://github.com/ragona/draw"
description = "A small 2D drawing library"
documentation = "https://docs.rs/draw"

[dependencies]
rgb = "0.8.14"
svg = "0.5.12"
rand = {version="0.7.0", features=["small_rng"]}
cgmath = "0.17.0"
usvg = "0.35.0"
resvg = "0.35.0"
